name:                hashed-trie
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/plow-technologies/hashed-trie#readme
license:             MIT
license-file:        LICENSE
author:              Edward Amsden
maintainer:          edward.amsden@plowtech.net
copyright:           2017 Plow Technologies
category:            Data Structures
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.ListTrie.HashMap
  build-depends:       base >= 4.7 && < 5
                     , unordered-containers
                     , list-tries
                     , mtl
                     , semigroups
                     , hashable
  default-language:    Haskell2010

test-suite hashed-trie-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , hashed-trie
                     , list-tries
                     , base
                     , binary
                     , template-haskell
                     , HUnit
                     , QuickCheck
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
                     , ChasingBottoms

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/plow-technologies/hashed-trie.git
